--- a/fanfiction/기타.html
+++ b/fanfiction/기타.html
@@ -12,15 +12,12 @@
 </head>
 <body>
     <div class="main">
-        <div >릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
-        <div >LILLY CLASSIC</div>
+        <div>릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
+        <div>LILLY CLASSIC</div>
         <hr size="2" color="white">
+        <div>제목</div>
         <section class="menu">
-            <div>1. 찬헌</div>
-            <div>2. 깡헌</div>
-            <div>3. 둥헌</div>
-            <div>4. 묭헌</div>
-            <div>5. 기타 헌른</div>
+
         </section>
         <hr size="2" color="white">
         <div>정보찾기(FIND,FF) 직접이동(GO) 재접속(LOG) 접속종료(X,BYE) 기타(Z)</div>
