--- a/fanfiction/찬헌.html
+++ b/fanfiction/찬헌.html
@@ -17,7 +17,7 @@
         <hr size="2" color="white">
         <div>제목</div>
         <section class="menu">
-            <div><a href="찬헌컴미.html">찬헌컴미</a></div>
+            <div><a href="chanhun/찬헌컴미.html">찬헌컴미</a></div>
         </section>
         <hr size="2" color="white">
         <div>정보찾기(FIND,FF) 직접이동(GO) 재접속(LOG) 접속종료(X,BYE) 기타(Z)</div>
