--- a/fanfiction/찬헌.html
+++ b/fanfiction/찬헌.html
@@ -12,12 +12,13 @@
 </head>
 <body>
     <div class="main">
-        <div >릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
-        <div >LILLY CLASSIC</div>
+        <div>릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
+        <div>LILLY CLASSIC</div>
         <hr size="2" color="white">
-        <div>제목</div>
-        <section class="menu">
-            <div><a href="chanhun/찬헌컴미.html">찬헌컴미</a></div>
+        <div class="flex-container"><div style = "margin-left:40px; margin-right:80px;">번호</div><div>제목</div></div>
+        <hr size="1" color="white">
+        <section>
+        <div class="flex-container"><div style = "margin-left:50px; margin-right:50px;">1</div><div><a href="chanhun/타성구아.html">타성구아惰性球兒</a></div></div>
         </section>
         <hr size="2" color="white">
         <div>정보찾기(FIND,FF) 직접이동(GO) 재접속(LOG) 접속종료(X,BYE) 기타(Z)</div>
