--- a/fanfiction/둥헌.html
+++ b/fanfiction/둥헌.html
@@ -16,8 +16,8 @@
         <div>LILLY CLASSIC</div>
         <hr size="2" color="white">
         <div>제목</div>
-        <section class="menu">
-
+        <hr size="1" color="white">
+        <section>
         </section>
         <hr size="2" color="white">
         <div>정보찾기(FIND,FF) 직접이동(GO) 재접속(LOG) 접속종료(X,BYE) 기타(Z)</div>
