--- a/fanfiction/깡헌.html
+++ b/fanfiction/깡헌.html
@@ -15,7 +15,7 @@
         <div>릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
         <div>LILLY CLASSIC</div>
         <hr size="2" color="white">
-        <div>제목</div>
+        <div class="flex-container"><div style="margin-left:40px; margin-right:80px;">번호</div><div>제목</div></div>
         <hr size="1" color="white">
         <section>
         </section>
