--- a/fanfiction.html
+++ b/fanfiction.html
@@ -19,7 +19,7 @@
             <div><a href="fanfiction/찬헌.html">1. 찬헌</a></div>
             <div><a href="fanfiction/깡헌.html">2. 깡헌</a></div>
             <div><a href="fanfiction/둥헌.html">3. 둥헌</a></div>
-            <div><a href="fanfiction/기타.html">4. 기타</a></div>
+            <div><a href="gfanfiction/기타.html">4. 기타</a></div>
 
         </section>
         <hr size="2" color="white">
