--- a/fanfiction/기타.html
+++ b/fanfiction/기타.html
@@ -15,9 +15,10 @@
         <div>릴리클래식</div> <div class="title_right"><div>SINCE 1999</div><div>www.lilly.com</div></div>
         <div>LILLY CLASSIC</div>
         <hr size="2" color="white">
-        <div class="flex-container"><div style="margin-left:40px; margin-right:80px;">번호</div><div>제목</div></div>
+        <div class="flex-container"><div style = "margin-left:40px; margin-right:80px;">번호</div><div>제목</div></div>
         <hr size="1" color="white">
         <section>
+        <div class="flex-container"><div style = "margin-left:50px; margin-right:50px;">1</div><div><a href="ItsBeenALongTime/ItsBeenALongTime.html">Its Been A Long Time</a></div></div>
         </section>
         <hr size="2" color="white">
         <div>정보찾기(FIND,FF) 직접이동(GO) 재접속(LOG) 접속종료(X,BYE) 기타(Z)</div>
